# goit_py_web_hw_14

./: docker-compose.yaml  main.py  pyproject.toml  readme.md  test.db
alembic/: env.py
alembic/versions/: b509dd80573b_.py
db_data/pgdata/global/: 1260  1262  2671  pg_control
db_data/pgdata/pg_stat/: pgstat.stat
docs/source/: conf.py  index.rst
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_unit_repository_contact.py  test_unit_users.py
